Fixed more tests on Ruby 3, revisited String FFI layer.
- Using the `ruby-macros` feature from `rb_sys` to leverage the RSTRING_* macros.
- Simplified String bindings.
- Updated some dotests because of Ruby 3.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ no-link = [] # noop, for backwards compatibility.
 [dependencies]
 libc = "0.2.151"
 lazy_static = "1.4.0"
-rb-sys = { version = "0.9.77" }
+rb-sys = { version = "0.9.77", features = ["ruby-macros"] }
 
 [dev-dependencies]
 rutie = { path = ".", features = ["embed"] }
