--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,13 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "macos-latest", "windows-latest"]
-        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3", "head"]
+        ruby: ["2.7", "3.0", "3.1", "3.2", "3.3"]
         rust: ["stable"]
         include:
           - os: windows-latest
             ruby-version: mingw
             rustup-toolchain: stable
+            ruby_static: true
     env:
       RUST_BACKTRACE: full
       CI_STDERR_LOG: true
